dream big added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="main-3">
+            <img class="second-image" src="./images/dipu2.png" alt="">
+        </div>
+        <div class="main-4">
+            <h1>Dream big</h1>
+            <h3>Became a fullstack Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet soluta illum similique eum cumque
+                quibusdam incidunt temporibus obcaecati harum reprehenderit, perspiciatis a velit sunt quae, voluptatum
+                nihil, labore itaque?</p>
+            <a class="linkedin" target="blank">Download Resume</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
