Added Experience part

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="main-1">
             <h1>Welcome To</h1>
             <h1><span class="span_colour">Dipu Sultan</span> World</h1>
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="main-3">
             <img class="second-image" src="./images/dipu2.png" alt="">
         </div>
@@ -46,6 +46,27 @@
                 nihil, labore itaque?</p>
             <a class="linkedin" target="blank">Download Resume</a>
         </div>
+    </section>
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="main-1">
+                <h1>Fullstack Developer</h1>
+                <h3>2022-Present|Pro level Developer</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe ea id est ab error tenetur?. Lorem
+                    ipsum
+                    dolor sit amet.</p>
+
+            </div>
+            <div class="main-1">
+                <h1>Babu Web Developer</h1>
+                <h3>2020-2021|Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique facere odit quos laborum
+                    assumenda nihil suscipit eius quo eum?</p>
+            </div>
+        </div>
+
     </section>
 
 </body>
