footer and card added

--- a/index.html
+++ b/index.html
@@ -51,23 +51,25 @@
     <section class="experience">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="main-1">
-                <h1>Fullstack Developer</h1>
-                <h3>2022-Present|Pro level Developer</h3>
+            <div class="main-1 card " id="fullstack">
+                <h2>Fullstack Developer</h2>
+                <h3 class="span_colour">2022-Present|Pro level Developer</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe ea id est ab error tenetur?. Lorem
                     ipsum
                     dolor sit amet.</p>
 
             </div>
-            <div class="main-1">
-                <h1>Babu Web Developer</h1>
-                <h3>2020-2021|Programming Hero Learner</h3>
+            <div class="main-1 card" id="baby">
+                <h2>Babu Web Developer</h2>
+                <h3 class="span_colour">2020-2021|Programming Hero Learner</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique facere odit quos laborum
                     assumenda nihil suscipit eius quo eum?</p>
             </div>
         </div>
 
     </section>
+
+    <footer>@Copyright Warning!</footer>
 
 </body>
 
