--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon"
+        href="https://cdn.dribbble.com/users/2512810/screenshots/13260708/media/1d9ef5d0c6a1c5dae7c6610bca931729.jpg?compress=1&resize=400x300"
+        type="image/x-icon">
 </head>
 
 <body>
