--- a/index.html
+++ b/index.html
@@ -20,22 +20,85 @@
     <section class="top-banner flexible-container">
         <div class="main-1">
             <h1>Welcome To</h1>
-            <h1><span class="span_colour">Dipu Sultan</span> World</h1>
+            <h1><span class="span_colour">Dipu Sultan's</span> World</h1>
             <h3>Learner and Developer</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos iste odio, voluptatibus maxime laudantium
-                quisquam
-                animi rem quas sint quasi ullam, hic, alias tempore consectetur quaerat doloribus architecto. Nemo in
-                itaque
-                voluptatibus perspiciatis nulla doloribus reiciendis. Modi non praesentium quis
-                corrupti beatae fugiat amet aperiam iure eaque? Quis, maiores?
+                Hello everyone<span>&#128075;&#127995;</span>. Assalamualaikum. Hope you are good. I'm Dipu Sultan. I'm from Kishoregonj,Dhaka,Bangladesh. I have comleted my graduation with bsc in CSE. I am a <span class="span_colour">MERN</span> stack web Developer. I am <span class="span_colour">creative</span> developer. Let's build something great together. Here is the link of my linkedin profile. Thanks for visiting.
             </p>
-            <a class="linkedin" href="https://www.linkedin.com/in/Dipu9094/" target="blank">Hire me</a>
+            <a class="linkedin" href="https://www.linkedin.com/in/Dipu9094/" target="blank">linkedin Profile</a>
         </div>
         <div class="main-2">
             <img class="first-image" src="./images/dipu1.png" alt="">
         </div>
     </section>
+
+    <!-- skill and Education -->
+
+    <div class="head">
+        <h1>Skills and my Educational background</h1>
+    </div>
+
+    <div class="personal-section">
+        <div class="skill">
+          
+            <h3 id="clr">Skills :</h3>
+
+            <h3>Communication skills :</h3>
+            <ul>
+                <li>Excellent communication skill with English, Bangla and Hindi. </li>
+                <li>IELTS candidate.</li>
+            </ul>
+
+            <h3>Organisational/managerial skills :</h3>
+            <ul>
+                <li>Leadership (During school and college life when i was in scout).</li>
+                <li>Team management.</li>
+                <li>Public Speaking (I was the best individual debater in our district).</li>
+            </ul>
+
+            <h3>Programming skills :</h3>
+
+            <ul>
+                <li>HTML</li>
+                <LI>CSS</LI>
+                <li>C</li>
+                <li>C++</li>
+                <li>Java Script</li>
+                <li>Have sound knowledge of networking.</li>
+            </ul>
+
+        </div>
+
+
+        <div class="education">
+
+            <h3 id="clr">Education :</h3>
+            <h4>Bsc in computer science and engineering</h4>
+            <h5>2017-2021</h5>
+            <p>Daffodil International University</p>
+            <p>102/1, Sukrabad Mirpur Rd, Dhaka 1207</p>
+            <p><a class="web" href="https://daffodilvarsity.edu.bd/" target="blank">Web:Daffodill International University</a></p>
+
+            <h4>SSC-2014</h4>
+            <p>SSC:-Aftab Uddin School and college</p>
+            <p>Bhagalpur,Bajitpur,Kishoregonj</p>
+            <h4>HSC-2016</h4>
+            <P>HSC:-Abdul kadir mollah city college.</P>
+            <p>Narsingdi,Dhaka</p>
+        </div>
+    </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- //Dream Big project -->
 
     <section class="dream-big flexible-container">
         <div class="main-3">
@@ -50,6 +113,8 @@
             <a class="linkedin" target="blank">Download Resume</a>
         </div>
     </section>
+
+
 
     <section class="experience">
         <h1>Experiences</h1>
@@ -72,7 +137,12 @@
 
     </section>
 
-    <footer>@Copyright Warning!</footer>
+    <footer class="foot">
+        <a href="#">Facebook</a>
+        <a href="#">Linked in</a>
+        <a href="#">Website</a>
+        <p>Copyright &copy; Dipu Sultan 2021</p>
+    </footer>
 
 </body>
 
