remove all loream text

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     <section class="top-banner flexible-container">
         <div class="main-1">
             <h1>Welcome To</h1>
-            <h1><span class="span_colour">Dipu Sultan's</span> World</h1>
+            <h1><span class="span_colour">Dipu Sultan's</span> Planet</h1>
             <h3>Learner and Developer</h3>
             <p>
-                Hello everyone<span>&#128075;&#127995;</span>. Assalamualaikum. Hope you are good. I'm Dipu Sultan. I'm from Kishoregonj,Dhaka,Bangladesh. I have comleted my graduation with bsc in CSE. I am a <span class="span_colour">MERN</span> stack web Developer. I am <span class="span_colour">creative</span> developer. Let's build something great together. Here is the link of my linkedin profile. Thanks for visiting.
+                Hello everyone<span>&#128075;&#127995;</span>. Assalamualaikum. Hope you are good. I'm Dipu Sultan. I'm
+                from Kishoregonj, Dhaka, Bangladesh. I have comleted my graduation with bsc in CSE. I am a <span
+                    class="span_colour">MERN</span> stack web Developer. I am a <span
+                    class="span_colour">creative</span>
+                developer. Let's build something great together. Here is the link of my linkedin profile. Thanks for
+                visiting.
             </p>
             <a class="linkedin" href="https://www.linkedin.com/in/Dipu9094/" target="blank">linkedin Profile</a>
         </div>
@@ -34,13 +39,13 @@
 
     <!-- skill and Education -->
 
-    <div class="head">
+    <div class="head-edu">
         <h1>Skills and my Educational background</h1>
     </div>
 
     <div class="personal-section">
         <div class="skill">
-          
+
             <h3 id="clr">Skills :</h3>
 
             <h3>Communication skills :</h3>
@@ -77,7 +82,8 @@
             <h5>2017-2021</h5>
             <p>Daffodil International University</p>
             <p>102/1, Sukrabad Mirpur Rd, Dhaka 1207</p>
-            <p><a class="web" href="https://daffodilvarsity.edu.bd/" target="blank">Web:Daffodill International University</a></p>
+            <p><a class="web" href="https://daffodilvarsity.edu.bd/" target="blank">Web:Daffodill International
+                    University</a></p>
 
             <h4>SSC-2014</h4>
             <p>SSC:-Aftab Uddin School and college</p>
@@ -92,51 +98,45 @@
 
 
 
-
-
-
-
-
-
-    <!-- //Dream Big project -->
-
+    <!-- //Dream Big project start-->
+<div class="middle">
+    
     <section class="dream-big flexible-container">
         <div class="main-3">
             <img class="second-image" src="./images/dipu2.png" alt="">
         </div>
         <div class="main-4">
-            <h1>Dream big</h1>
-            <h3>Became a fullstack Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente amet soluta illum similique eum cumque
-                quibusdam incidunt temporibus obcaecati harum reprehenderit, perspiciatis a velit sunt quae, voluptatum
-                nihil, labore itaque?</p>
-            <a class="linkedin" target="blank">Download Resume</a>
+            <h1 id="idex">Dream big</h1>
+            <h3>Became a Software Engineer</h3>
+            <p>As I am student of CSE and my passion is coding so my dream is to become a software engineer. Beside mern
+                stack development I'm a problem solver also. I know about various Algorithms and Data structers. I
+                belive in hardwork and confident about myself , soon I will catch my dream.</p>
+            <a class="linkedin" href="https://github.com/Dipu9094" target="blank">GitHub</a>
         </div>
     </section>
-
-
 
     <section class="experience">
-        <h1>Experiences</h1>
+        <h1 id="idex">Experiences</h1>
         <div class="flexible-container">
-            <div class="main-1 card " id="fullstack">
+            <div class="card " id="fullstack">
                 <h2>Fullstack Developer</h2>
-                <h3 class="span_colour">2022-Present|Pro level Developer</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe ea id est ab error tenetur?. Lorem
-                    ipsum
-                    dolor sit amet.</p>
+                <h3 class="span_colour">2022-Future | Pro level Developer</h3>
+                <p>I worked as fulltime Fullstack web developer. I used technology for fronted react,vue or angulat js.
+                    For
+                    backend I used nodejs and express js. I'm good at making API.</p>
 
             </div>
-            <div class="main-1 card" id="baby">
+            <div class="card" id="baby">
                 <h2>Babu Web Developer</h2>
-                <h3 class="span_colour">2020-2021|Programming Hero Learner</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias similique facere odit quos laborum
-                    assumenda nihil suscipit eius quo eum?</p>
+                <h3 class="span_colour">2020-2021 | Programming Hero Learner</h3>
+                <p>At this period I was a student of pogramming hero . Jhankar Mahbub vai is one of the best teacher i
+                    ever have seen in my entire life. He helped me to enter the development world. </p>
             </div>
         </div>
 
     </section>
 
+</div>
     <footer class="foot">
         <a href="#">Facebook</a>
         <a href="#">Linked in</a>
